FullQa New/src/PS Enterprise/objects/Forecast_Curve_Detail__c.object
<CustomObject>
    <customHelpPage>ForecastCurveHelp</customHelpPage>
    <description>Represents a single sequence of time used within a forecast curve, and includes the percentage of the total forecast amount of revenue anticipated within that time period.</description>
    <fields>
        <fullName>Forecast_Curve__c</fullName>
        <inlineHelpText>A lookup to the Forecast Curve object.</inlineHelpText>
        <label>Forecast Curve</label>
        <referenceTo>Forecast_Curve__c</referenceTo>
        <relationshipLabel>Forecast Curve Details</relationshipLabel>
        <relationshipName>Forecast_Curve_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percent_Burndown__c</fullName>
        <inlineHelpText>The percentage of the total forecast amount anticipated per curve point in a quarter.</inlineHelpText>
        <label>Percent Burndown</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>Controls the order in which the forecast curve details are applied to the forecast curve. Each forecast curve detail record on a curve must have a different number in this field to indicate its place on the curve.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast Curve Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Forecast Curve Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Curve Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>